Closed Bug 1511973 Opened 7 years ago Closed 7 years ago

[Wayland] Key shortcuts (ALT+num) do not work

Categories

(Core :: Widget: Gtk, defect, P2)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox65 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

The key shortcuts (key mapping) do not work in latest Nighly after Bug 1511011 landed.
We can't listen on GdkDeviceManager as we need to track device changes here. Rvert back the old working setup based on wl_seat listeners. Also check if the keyboard is already present (before it's created here) to avoid memory leaks.
Pushed by nbeleuzu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d932537fec3b [Wayland] Listen for keyboard layout changes on wl_seat again, r=jhorak
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65

This is still not working on nightly, 67.0a1 (2019-02-03) (64-bit) under wayland.

I'm also seeing this on Firefox 66.0b6 developer edition under Wayland, build 20190208180655.

I'm also experiencing this bug in Wayland using 67.0a1 (2019-02-11).

(In reply to Geoff Greer from comment #6)

I'm also experiencing this bug in Wayland using 67.0a1 (2019-02-11).

Can I ask which window manager are you using? I've realized I'm seeing this issue only when using Sway, but not with GNOME on Wayland.

I'm using Sway. Alt + num does work in other applications such as gnome-terminal. Also, hitting alt in Firefox toggles the menu bar at the top of the window.

Please file a new bug for it and state your compositor (I expect Sway, correct?). Thanks.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: