Bug 1511973 - [Wayland] Listen for keyboard layout changes on wl_seat again, r=jhorak

We can't listen on GdkDeviceManager as we need to track device changes here. Rvert back
the old working setup based on wl_seat listeners. Also check if the keyboard is already present
(before it's created here) to avoid memory leaks.

Differential Revision: https://phabricator.services.mozilla.com/D13727